@@ -4,6 +4,9 @@ Changelog
 3.5 - unreleased
 ----------------
 
+* return the correctly rendered page when calling the RichDocument context
+  [petschki]
+
 3.4 - 2012-01-23
 ----------------
 
